# bnpl-trap

./: .gitignore  MASTERPLAN.md  MASTERPLAN.tex  MASTERPLAN_V2.md  MASTERPLAN_V3.md  MASTERPLAN_V4.md  PRELIMINARY_PAPER.md  SPRINT_REPORT.md  build_pdf.py  paper_header.tex
bnpl-pod/: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
bnpl-pod/.claude/: launch.json
bnpl-pod/.streamlit/: config.toml
bnpl-pod/agents/: compliance_engine.py  graph.py  llm_client.py  macro_agent.py  quant_agent.py  risk_manager.py  schemas.py  tick.py
bnpl-pod/backtest/: car_event_study.py  counterfactual_nomove.py  event_study.py  pnl_sim.py  sensitivity.py
bnpl-pod/config/: panel.yaml  thresholds.yaml  weights.yaml
bnpl-pod/dashboard/: build_snapshot.py  chat_renderer.py  design_tokens.py  plotly_theme.py  sbg_dashboard.py  streamlit_app.py
bnpl-pod/data/: regulatory_calendar.py  schema.py  settings.py
bnpl-pod/docs/: alt_abstract_sealed.md  bypass_audit.txt  overnight_status.md  scorer_surgery_result.md  submission_plan.md  v1_retrospective.md  v2_roadmap.md
bnpl-pod/nlp/: finbert_sentiment.py
bnpl-pod/paper/: make_figures.py  paper.bbl  paper.blg  paper.tex  references.bib
bnpl-pod/paper_formal/: paper_formal.bbl  paper_formal.blg  paper_formal.tex  references.bib
bnpl-pod/portfolio/: book.py  mean_cvar.py  scenario_generator.py
bnpl-pod/quant/: crisis_transport.py  heston_scp.py  jarrow_turnbull.py  squeeze_defense.py
bnpl-pod/scripts/: sprint_h_probe.py
bnpl-pod/signals/: __init__.py  bsi.py  bsi_residual.py  decoupling.py  granger.py  granger_mde.py  originations_interp.py  permutation_null.py  placebos.py  sensitivity.py
bnpl-pod/slides/: README.md  class_presentation.md  class_presentation.pptx  class_presentation_deep.md
bnpl-pod/tests/: test_abs_parser.py  test_agent_pod.py  test_auto_abs_historical.py  test_bsi.py  test_car_event_study.py  test_cfpb.py  test_compliance_engine.py  test_crisis_transport.py  test_decoupling.py  test_event_study.py  test_finbert_sentiment.py  test_firm_vitality.py  test_fixture_loader.py  test_fred_ingest.py  (+15 more)
(+55 files in other folders)
