[project]
name = "bnpl-pod"
version = "0.1.0"
description = "Agentic AI pod for BNPL credit-stress detection and structured-credit signal generation"
readme = "README.md"
requires-python = ">=3.11,<3.13"
authors = [{ name = "BNPL Pod" }]

dependencies = [
    # --- Data + storage ---
    "duckdb>=1.1",
    "polars>=1.14",
    "pandas>=2.2",
    "pyarrow>=18.0",
    "numpy>=1.26,<2.2",
    "scipy>=1.13",
    "python-dotenv>=1.0",
    "pydantic>=2.8",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "tenacity>=9.0",
    "edgartools>=3.0",    # SEC EDGAR client — filings index, company facts, XBRL
    "beautifulsoup4>=4.12",  # HTML parsing for auto-ABS trustee reports + Wayback
    # --- Stats + optim ---
    "statsmodels>=0.14",
    "cvxpy>=1.5",
    "arch>=7.0",           # block bootstrap utilities
    # --- Quant ---
    "QuantLib>=1.34",
    "yfinance>=0.2.50",
    # --- Alt data ---
    "praw>=7.7",
    "pytrends>=4.9",
    # --- NLP ---
    "transformers>=4.45",
    "torch>=2.4",
    "sentencepiece>=0.2",
    # --- LLM + agents ---
    "openai>=1.50",        # OpenAI-compatible client serves BOTH NIM and Gemini
    "langgraph>=0.2.50",
    "langchain-core>=0.3",
    # --- Vector store (optional; docker-compose ships Milvus) ---
    "pymilvus>=2.4",
    # --- Dashboard (Streamlit first) ---
    "streamlit>=1.39",
    "plotly>=5.24",
    "matplotlib>=3.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "mypy>=1.13",
    "ipykernel>=6.29",
    "jupyterlab>=4.3",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["data*", "nlp*", "signals*", "quant*", "portfolio*", "agents*", "backtest*", "dashboard*"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "PL"]
ignore = ["PLR0913", "PLR2004"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
